[metadata]
name = hacking
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = OpenStack Hacking Guideline Enforcement
description-file =
    README.rst
home-page = http://github.com/openstack-dev/hacking
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    hacking

[entry_points]
flake8.extension =
    S006 = hacking.checks.security:hacking_no_pickle
    S009 = hacking.checks.security:hacking_service_binding_all_interfaces

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source


[pbr]
warnerrors = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
